# tagma

./: .gitignore  ARCHITECTURE.md  PLAN.md  SPEC.md  justfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
bindings/js/: .gitignore  .npmignore  cucumber.json  package-lock.json  package.json
bindings/js/features-steps/: steps.mjs
bindings/js/scripts/: inline.mjs
bindings/js/src/: browser.mjs  index.d.ts  node.mjs
bindings/js/test/: smoke.test.mjs
bindings/python/: .gitignore  Cargo.toml  pyproject.toml
bindings/python/features/: arity.feature  compile.feature  environment.py  hide-ns.feature  hide.feature  matching.feature  tags.feature
bindings/python/features/steps/: tagma_steps.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
crates/tagma-cli/: Cargo.toml
crates/tagma-cli/src/: main.rs
crates/tagma-cli/tests/: cli.rs
crates/tagma-core/: Cargo.toml
crates/tagma-core/benches/: engine.rs
crates/tagma-core/src/: atom.rs  index.rs  infix.rs  lib.rs  postfix.rs  tag.rs  token.rs  typecmp.rs
crates/tagma-core/tests/: conformance.rs
crates/tagma-ffi/: Cargo.toml  cbindgen.toml
crates/tagma-ffi/src/: handle.rs  lib.rs
crates/tagma-wasm/: Cargo.toml
docs/: steps.md
features/: arity.feature  compile.feature  hide-ns.feature  hide.feature  matching.feature  tags.feature  type-comparison.feature
include/: tagma.h
ports/go/: atom.go  conformance_test.go  go.mod  hide_test.go  index.go  index_test.go  infix.go  infix_test.go  matching.go  postfix.go  tag.go  tag_test.go  token.go  token_test.go
(+2 files in other folders)
