[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tagma"
version = "0.1.0"
description = "Python bindings for tagma (PyO3, wraps tagma-core directly)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "tagma"
features = ["pyo3/extension-module"]
